--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - SnapFolio Bootstrap Template</title>
+  <title></title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -99,21 +99,20 @@
 
             <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
               <div class="hero-text">
-                <h1>Snap<span class="accent-text">Folio</span></h1>
-                <h2>Alexander Chen</h2>
-                <p class="lead">I'm a <span class="typed" data-typed-items="UI/UX Designer, Web Developer, Brand Strategist, Creative Director"></span></p>
-                <p class="description">Passionate about creating exceptional digital experiences that blend innovative design with functional development. Let's bring your vision to life.</p>
+                <h1>Curriculum<span class="accent-text">Vitae</span></h1>
+                <h2>Victor Ehuan/h2>
+                <p class="lead">Physics Engineer</p>
+                <p class="description">I'm an engineer enthusiastic about projects where I can apply mathematics and Data Analysis.</p>
 
                 <div class="hero-actions">
-                  <a href="#portfolio" class="btn btn-primary">View My Work</a>
-                  <a href="#contact" class="btn btn-outline">Get In Touch</a>
+                  <a href="#portfolio" class="btn btn-primary">My Work</a>
+                 
                 </div>
 
                 <div class="social-links">
-                  <a href="#"><i class="bi bi-dribbble"></i></a>
-                  <a href="#"><i class="bi bi-behance"></i></a>
-                  <a href="#"><i class="bi bi-github"></i></a>
-                  <a href="#"><i class="bi bi-linkedin"></i></a>
+
+                  <a href=https://www.linkedin.com/in/victor-ehuan/><i class="bi bi-github"></i></a>
+                  <a href=https://github.com/Vehuan><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
@@ -122,7 +121,7 @@
               <div class="hero-visual">
                 <div class="profile-container">
                   <div class="profile-background"></div>
-                  <img src="assets/img/profile/profile-2.webp" alt="Alexander Chen" class="profile-image">
+                  <img src="assets/img/profile/Me.jpg" alt="Victor Ehuan" class="profile-image">
                 </div>
               </div>
             </div>
