--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
             <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
               <div class="hero-text">
-                <h1>Victor Ehua</h1>
+                <h1>Victor Ehuan</h1>
              
                 <p class="lead">Physics Engineer</p>
                 <p class="description">I'm an engineer enthusiastic about projects where I can apply mathematics and Data Analysis.</p>
