--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             </div>
           </div>
 
-              
+               </div>
           <!-- Right column with experience and education -->
           <div class="col-lg-8 ps-4 ps-lg-5">
             <!-- Experience Section -->
