--- a/index.html
+++ b/index.html
@@ -167,9 +167,11 @@
                 </div>
 
                 <div class="skill-item">
+                  
                   <div class="d-flex justify-content-between">
-                      <span>Excel, Word, PowerPoint, Illustrator and Photoshop.</span>
-
+                    <ul>
+                    <il>  <span>Excel, Word, PowerPoint, Illustrator and Photoshop.</span> </il>
+                    </ul>
                   </div>
 
                 </div>
@@ -187,9 +189,7 @@
                     <span>Project Management</span>
                     <span>80%</span>
                   </div>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
+
                 </div>
               </div>
             </div>
