--- a/index.html
+++ b/index.html
@@ -246,20 +246,30 @@
               </div>
 
             <div class="resume-section" data-aos="fade-up" data-aos-delay="100">
-              <h3><i class="bi bi-mortarboard me-2"></i>Education</h3>
+              <h3><i class="bi bi-mortarboard me-2"></i>Skills</h3>
 
               <div class="resume-item">
-                <h4>Physics Engineering</h4>
-                <h5>2018 - 2023</h5>
-                <p class="company"><i class="bi bi-building"></i> UADY </p>
-                <p>Specialized in Artificial Intelligence and Machine Learning. Graduated with honors.</p>
+                <h4>Technical Skills</h4>
+                <p class="company"><i class="bi bi-boxes"></i> Technical Skills </p>
+                <ul>
+                  <li>Programming skills in Python, HTML, CSS, and MySQL.</li>
+                  <li>Excel, Word, PowerPoint, Illustrator and Photoshop.</li>
+                  <li>3D design in Fusion360 and Flow Design.</li>
+                </ul>
               </div>
 
               <div class="resume-item">
-                <h4>AWS Cloud Practitiones Essentials.</h4>
-                <h5>2023</h5>
-                <p>Understanding and describing the basics of the Amazon cloud and its web services.</p>
+                <h4>Softskills.</h4>
+                <ul>
+                  <li>LeadershipL.</li>
+                  <li>Communication.</li>
+                  <li>Adaptability.</li>
+                  <li>Problem-solving.</li>
+                  <li>Self-taught.</li>
+                </ul>
               </div>
+
+              
             </div>
 
 
