--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
               </div>
 
               <div class="resume-item">
-                <h4>Odoo developer T</h4>
+                <h4>Odoo developer Tr</h4>
                 <h5>2023</h5>
                 <p class="company"><i class="bi bi-building"></i> Wayakna</p>
                 <ul>
